added Font-awesome with webpack

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,7 @@
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
   <img src="/img/logo.png">
+  <span>Test for Font-awesome</span><i class="fa fa-circle-o"></i>
 </main>
 <footer>
   <a ng-href="{{app.url}}">Webpack Angular Starter</a>
